// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foundry-agent-package - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Package and containerize agent projects for deployment as Hosted Agents in Azure AI Foundry. Generates Dockerfiles, docker-compose files, scans for environment variables, and publishes images to Azure Container Registry (ACR).
USE FOR: containerize agent, Dockerfile, Docker image, ACR, package agent, dockerize, container registry, build image, push image, docker-compose, environment variable scan.
DO NOT USE FOR: deploying agents to Foundry (use foundry-agent-deploy), invoking or testing agents (use foundry-agent-run), Azure Functions (use azure-functions).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "azure-functions",
    "build",
    "cli",
    "container",
    "containerize",
    "deploy",
    "deploying",
    "deployment",
    "docker",
    "docker-compose",
    "dockerfile",
    "dockerfiles",
    "dockerize",
    "environment",
    "files",
    "foundry",
    "foundry-agent-deploy",
    "foundry-agent-run",
    "functions",
    "generates",
    "hosted",
    "image",
    "images",
    "invoking",
    "key vault",
    "package",
    "projects",
    "publishes",
    "push",
    "registry",
    "scan",
    "scans",
    "testing",
    "variable",
    "variables",
  ],
  "name": "foundry-agent-package",
}
`;

exports[`foundry-agent-package - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "azure-functions",
  "build",
  "cli",
  "container",
  "containerize",
  "deploy",
  "deploying",
  "deployment",
  "docker",
  "docker-compose",
  "dockerfile",
  "dockerfiles",
  "dockerize",
  "environment",
  "files",
  "foundry",
  "foundry-agent-deploy",
  "foundry-agent-run",
  "functions",
  "generates",
  "hosted",
  "image",
  "images",
  "invoking",
  "key vault",
  "package",
  "projects",
  "publishes",
  "push",
  "registry",
  "scan",
  "scans",
  "testing",
  "variable",
  "variables",
]
`;
